--- a/app/nginx/uol/domains/www.uol.com.br.conf
+++ b/app/nginx/uol/domains/www.uol.com.br.conf
@@ -1,14 +1,24 @@
 server {
   listen   443 ssl http2;
 
-  server_name  www.uol.preview.intranet;
+  	server_name  home.uol.com.br www.uol.com.br uol.com.br www.uol.preview.intranet;
+	
+	ssl_certificate			/etc/nginx/uol/ssl/uol.crt;
+	ssl_certificate_key 	/etc/nginx/uol/ssl/uol.key;
+
+	location / {
+		proxy_pass_request_headers on;
+		proxy_buffering off;
+		proxy_pass https://developmentSSL/;
+		proxy_set_header Host $host;
+	}
 
   return 301 http://$server_name$request_uri;
 }
 
 server {
 	listen       80;
-	server_name  www.uol.preview.intranet;
+	server_name  home.uol.com.br www.uol.com.br uol.com.br www.uol.preview.intranet;
 
 	location / {
 		proxy_pass_request_headers on;
@@ -16,41 +26,4 @@ server {
 		proxy_pass https://developmentSSL/;
 		proxy_set_header Host $host;
 	}
-
-}
-
-
-
-server {
-  listen   80;
-  # listen   9999;
-
-  server_name  home.uol.com.br www.uol.com.br uol.com.br;
-
-  location / {
-		proxy_pass_request_headers on;
-		proxy_buffering off;
-		proxy_pass http://development/;
-		proxy_set_header Host $host;
-	}
-}
-
-server {
-  listen   443 ssl http2;
-
-  server_name  home.uol.com.br www.uol.com.br uol.com.br;
-
-	ssl_certificate         uol/cert/myCA.crt;
-	ssl_certificate_key   uol/cert/UOLmyCA.key;
-  
-	location / {
-		proxy_pass_request_headers on;
-		proxy_buffering off;
-		proxy_pass https://developmentSSL/;
-    # proxy_set_header Host home.uol.com.br;
-		proxy_set_header Host $host;
-		# proxy_set_header    X-Real-IP $remote_addr;
-        # proxy_set_header    X-HTTPS   'True';
-	}
-
 }
