Ajustes de domain

--- a/app/nginx/uol/domains/c.jsuol.com.br.conf
+++ b/app/nginx/uol/domains/c.jsuol.com.br.conf
@@ -10,8 +10,8 @@ server {
 
     server_name  c.jsuol.com.br;
 
-	ssl_certificate         uol/cert/myCA.crt;
-	ssl_certificate_key   uol/cert/UOLmyCA.key;
+	ssl_certificate         /etc/nginx/uol/ssl/myCA.crt;
+	ssl_certificate_key   /etc/nginx/uol/ssl/UOLmyCA.key;
 
 	location / {
         proxy_buffering off;
