--- a/app/nginx/uol/domains/imguol.com.conf
+++ b/app/nginx/uol/domains/imguol.com.conf
@@ -4,8 +4,8 @@ server {
 	server_name  imguol.com imguol.com.br hp.imguol.com.br conteudo.imguol.com.br;
 
 	
-	ssl_certificate         uol/cert/myCA.crt;
-	ssl_certificate_key   uol/cert/UOLmyCA.key;
+	ssl_certificate         /etc/nginx/uol/ssl/myCA.crt;
+	ssl_certificate_key   /etc/nginx/uol/ssl/UOLmyCA.key;
 
 	location ^~ /c/_layout/v1/mobile/uol/ {
 		add_header Cache-Control no-cache;
@@ -22,7 +22,7 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		alias /Volumes/llaraujo/playground/uol/git/imguol.com.br-c/home/layout/camaleao/web/svg/;
+		alias /home/rrfsantos/Documents/start/git/imguol.com.br-c/home/layout/camaleao/web/svg/;
 	}
 
 	location ^~ /c/placar/esporte/futebol/v3/bg/51/ {
@@ -31,7 +31,7 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		alias /Volumes/llaraujo/playground/uol/git/imguol.com.br-c/placar/esporte/futebol/v3/bg/51/;
+		alias /home/rrfsantos/Documents/start/git/imguol.com.br-c/placar/esporte/futebol/v3/bg/51/;
 	}
 
 	location ^~ /_layout/v1/mobile/uol/ {
@@ -40,12 +40,12 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		root /Volumes/llaraujo/playground/uol/git/imguol.com.br-c/;
+		root /home/rrfsantos/Documents/start/git/imguol.com.br-c/;
 	}
 
 
 	location ^~ /c/placar/esporte/modalidades/futebol/mobile/img/ {
-		alias /Volumes/llaraujo/playground/uol/git/projeto-placar-futebol/servers/imguol.com.br/c/placar/esporte/modalidades/futebol/mobile/img/;
+		alias /home/rrfsantos/Documents/start/git/projeto-placar-futebol/servers/imguol.com.br/c/placar/esporte/modalidades/futebol/mobile/img/;
 	}
 
 	location / {
