--- a/app/nginx/uol/domains/jsuol.com.br.conf
+++ b/app/nginx/uol/domains/jsuol.com.br.conf
@@ -13,8 +13,8 @@ server {
   server_name  jsuol.com.br dev.jsuol.com.br conteudo.jsuol.com.br;
 
   
-	ssl_certificate         uol/cert/myCA.crt;
-	ssl_certificate_key   uol/cert/UOLmyCA.key;
+	ssl_certificate         /etc/nginx/uol/ssl/myCA.crt;
+	ssl_certificate_key   /etc/nginx/uol/ssl/UOLmyCA.key;
 
 	#################################
 	##	Barra
@@ -32,7 +32,7 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias /Volumes/llaraujo/playground/uol/git/ticker-copa/dist/min.js;
+		alias /home/rrfsantos/Documents/start/git/ticker-copa/dist/min.js;
 	}
 
 	#################################
@@ -75,7 +75,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias /Volumes/llaraujo/playground/uol/git/projeto-placar-esporte/dist/v3/;
+	# 	alias /home/rrfsantos/Documents/start/git/projeto-placar-esporte/dist/v3/;
 	# }
 
 
