--- a/app/nginx/uol/domains/publicador.intranet.conf
+++ b/app/nginx/uol/domains/publicador.intranet.conf
@@ -43,13 +43,13 @@ server {
 	## 	Apelidos de Atletas
 	################################
 
-	# location ^~ /resources/conteudo/ {
-	# 	add_header Cache-Control no-cache;
-	# 	expires           off;
-	# 	proxy_buffering   off;
-	# 	sendfile          off;
-	# 	alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/;
-	# }
+	location ^~ /resources/conteudo/ {
+		add_header Cache-Control no-cache;
+		expires           off;
+		proxy_buffering   off;
+		sendfile          off;
+		alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/;
+	}
 
 	################################
 	## Home UOL
