--- a/app/nginx/uol/domains/www.bol.uol.com.br.conf
+++ b/app/nginx/uol/domains/www.bol.uol.com.br.conf
@@ -3,8 +3,8 @@ server {
 	server_name  www.bol.uol.preview.intranet;
 
 	
-	ssl_certificate         uol/cert/myCA.crt;
-	ssl_certificate_key    uol/cert/UOLmyCA.key;
+	ssl_certificate         /etc/nginx/uol/ssl/myCA.crt;
+	ssl_certificate_key    /etc/nginx/uol/ssl/UOLmyCA.key;
 
 	location / {
 		proxy_pass_request_headers on;
@@ -29,8 +29,8 @@ server {
   server_name  home.bol.uol.com.br www.bol.uol.com.br bol.uol.com.br;
 
   #ssl_protocols          TLSv1 TLSv1.1 TLSv1.2;
-	ssl_certificate        uol/cert/myCA.crt;
-	ssl_certificate_key    uol/cert/UOLmyCA.key;
+	ssl_certificate        /etc/nginx/uol/ssl/myCA.crt;
+	ssl_certificate_key    /etc/nginx/uol/ssl/UOLmyCA.key;
 
 	location / {
 		proxy_pass_request_headers on;
