--- a/app/nginx/uol/domains/www.uol.com.br.conf
+++ b/app/nginx/uol/domains/www.uol.com.br.conf
@@ -2,7 +2,7 @@
 server {
   	listen   443 ssl http2;
 
-  	server_name  home.uol.preview.intranet www.uol.preview.intranet;
+  	server_name  www.uol.preview.intranet home.uol.preview.intranet;
 	
 	ssl_certificate			/etc/nginx/uol/ssl/myCA.crt;
 	ssl_certificate_key 	/etc/nginx/uol/ssl/UOLmyCA.key;
@@ -12,7 +12,7 @@ server {
 
 server {
 	listen       80;
-	server_name  home.uol.preview.intranet www.uol.preview.intranet;
+	server_name  www.uol.preview.intranet home.uol.preview.intranet;
 
 	location / {
 		proxy_pass_request_headers on;
