--- a/app/nginx/uol/domains/imguol.com.conf
+++ b/app/nginx/uol/domains/imguol.com.conf
@@ -22,7 +22,7 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		alias /home/rrfsantos/Documents/start/git/imguol.com.br-c/home/layout/camaleao/web/svg/;
+		alias $PG/git/imguol.com.br-c/home/layout/camaleao/web/svg/;
 	}
 
 	location ^~ /c/placar/esporte/futebol/v3/bg/51/ {
@@ -31,7 +31,7 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		alias /home/rrfsantos/Documents/start/git/imguol.com.br-c/placar/esporte/futebol/v3/bg/51/;
+		alias $PG/git/imguol.com.br-c/placar/esporte/futebol/v3/bg/51/;
 	}
 
 	location ^~ /_layout/v1/mobile/uol/ {
@@ -40,12 +40,12 @@ server {
 		proxy_buffering   off;
 		sendfile          off;
 
-		root /home/rrfsantos/Documents/start/git/imguol.com.br-c/;
+		root $PG/git/imguol.com.br-c/;
 	}
 
 
 	location ^~ /c/placar/esporte/modalidades/futebol/mobile/img/ {
-		alias /home/rrfsantos/Documents/start/git/projeto-placar-futebol/servers/imguol.com.br/c/placar/esporte/modalidades/futebol/mobile/img/;
+		alias $PG/git/projeto-placar-futebol/servers/imguol.com.br/c/placar/esporte/modalidades/futebol/mobile/img/;
 	}
 
 	location / {
