--- a/app/nginx/uol/domains/jsuol.com.br.conf
+++ b/app/nginx/uol/domains/jsuol.com.br.conf
@@ -32,7 +32,7 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias /home/rrfsantos/Documents/start/git/ticker-copa/dist/min.js;
+		alias $PG/git/ticker-copa/dist/min.js;
 	}
 
 	#################################
@@ -75,7 +75,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias /home/rrfsantos/Documents/start/git/projeto-placar-esporte/dist/v3/;
+	# 	alias $PG/git/projeto-placar-esporte/dist/v3/;
 	# }
 
 
