--- a/app/nginx/uol/domains/publicador.intranet.conf
+++ b/app/nginx/uol/domains/publicador.intranet.conf
@@ -9,12 +9,12 @@ server {
 
 	## Ticker
   # location /resources/publisher/realtime/script.js {
-  #   alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/placar/esporte/futebol/copa-do-mundo/2018/ticker/libs/realtime.js;
+  #   alias $PG/git/publicador-resources-conteudo/placar/esporte/futebol/copa-do-mundo/2018/ticker/libs/realtime.js;
   # }
 
   ## DEV
   # location /resources/publisher/realtime/script.js {
-  #   alias /home/rrfsantos/Documents/start/git/publicador-plugin-realtime/app/scripts/script.js;
+  #   alias $PG/git/publicador-plugin-realtime/app/scripts/script.js;
   # }
 
   ################################
@@ -48,7 +48,7 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/;
+		alias $PG/git/publicador-resources-conteudo/;
 	}
 
 	################################
@@ -60,7 +60,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/;
+	# 	alias $PG/git/publicador-resources-conteudo/;
 	# }
 
 	################################
@@ -72,7 +72,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias /home/rrfsantos/Documents/start/git/publicador-resources-conteudo/publish/;
+	# 	alias $PG/git/publicador-resources-conteudo/publish/;
 	# }
 
 	################################
@@ -84,7 +84,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias /home/rrfsantos/Documents/start/git/publicador-plugin-realtime/app/scripts/script.js;
+	# 	alias $PG/git/publicador-plugin-realtime/app/scripts/script.js;
 	# }
 
 
