Ajustando dados de nginx

--- a/app/nginx/uol/domains-bkp/publicador.qa.intranet.conf
+++ b/app/nginx/uol/domains-bkp/publicador.qa.intranet.conf
@@ -9,12 +9,12 @@ server {
 
 	## Ticker
   # location /resources/publisher/realtime/script.js {
-  #   alias $PG/git/publicador-resources-conteudo/placar/esporte/futebol/copa-do-mundo/2018/ticker/libs/realtime.js;
+  #   alias ~/Playground/git/publicador-resources-conteudo/placar/esporte/futebol/copa-do-mundo/2018/ticker/libs/realtime.js;
   # }
 
   ## DEV
   # location /resources/publisher/realtime/script.js {
-  #   alias $PG/git/publicador-plugin-realtime/app/scripts/script.js;
+  #   alias ~/Playground/git/publicador-plugin-realtime/app/scripts/script.js;
   # }
 
   ################################
@@ -48,7 +48,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias $PG/git/publicador-resources-conteudo/;
+	# 	alias ~/Playground/git/publicador-resources-conteudo/;
 	# }
 
 	################################
@@ -60,7 +60,7 @@ server {
 	# 	expires           off;
 	# 	proxy_buffering   off;
 	# 	sendfile          off;
-	# 	alias $PG/git/publicador-resources-conteudo/;
+	# 	alias ~/Playground/git/publicador-resources-conteudo/;
 	# }
 
 	################################
@@ -72,8 +72,8 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias $PG/git/publicador-resources-conteudo/placar/esporte/futebol/;
-		# alias $PG/git/publicador-resources-conteudo-2/placar/esporte/futebol/;
+		alias ~/Playground/git/publicador-resources-conteudo/placar/esporte/futebol/;
+		# alias ~/Playground/git/publicador-resources-conteudo-2/placar/esporte/futebol/;
 	}
 
 	################################
@@ -85,7 +85,7 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias $PG/git/publicador-resources-conteudo/publish/;
+		alias ~/Playground/git/publicador-resources-conteudo/publish/;
 	}
 
 	################################
@@ -97,7 +97,7 @@ server {
 		expires           off;
 		proxy_buffering   off;
 		sendfile          off;
-		alias $PG/git/publicador-plugin-realtime/app/scripts/script.js;
+		alias ~/Playground/git/publicador-plugin-realtime/app/scripts/script.js;
 	}
 
 
