--- a/app/nginx/uol/domains/www.uol.com.br.conf
+++ b/app/nginx/uol/domains/www.uol.com.br.conf
@@ -23,25 +23,61 @@ server {
 }
 
 ### HOME UOL
-server {
-  listen   443 ssl http2;
+# server {
+#   listen   443 ssl http2;
 
-  	server_name  home.uol.com.br www.uol.com.br uol.com.br;
+#   	server_name  home.uol.com.br www.uol.com.br uol.com.br;
 	
-	ssl_certificate			/etc/nginx/uol/ssl/myCA.crt;
-	ssl_certificate_key 	/etc/nginx/uol/ssl/UOLmyCA.key;
+# 	ssl_certificate			/etc/nginx/uol/ssl/myCA.crt;
+# 	ssl_certificate_key 	/etc/nginx/uol/ssl/UOLmyCA.key;
 
-	location / {
-		proxy_pass_request_headers on;
-		proxy_buffering off;
-		proxy_pass https://developmentSSL/;
-		proxy_set_header Host $host;
-	}
+# 	location / {
+# 		proxy_pass_request_headers on;
+# 		proxy_buffering off;
+# 		proxy_pass https://developmentSSL/;
+# 		proxy_set_header Host $host;
+# 	}
 
-}
+# }
+
 server {
 	listen       80;
-	server_name  home.uol.com.br www.uol.com.br uol.com.br;
-	
+	server_name  home.uol.com.br www.uol.com.br uol.com.br;	
 	return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen   80;
+    server_name  www.uol.com.br;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name  www.uol.com.br;
+    ssl                     on;
+    ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+    ssl_certificate         /etc/nginx/uol/ssl/uol.crt;
+    ssl_certificate_key     /etc/nginx/uol/ssl/uol.key;
+
+	location ^~ /carnaval/apuracao/ {
+		proxy_buffering off;
+        proxy_pass http://development;
+        proxy_set_header Host $http_host;
+	}
+
+    location ^~ /carnaval/ {
+        proxy_buffering off;
+        proxy_pass https://HomeProduction/carnaval/;
+        proxy_pass_request_headers on;
+        proxy_set_header Host "www.uol.com.br";
+    }
+
+    location / {
+        proxy_buffering off;
+        proxy_pass https://HomeProduction/;
+        proxy_pass_request_headers on;
+        proxy_set_header Host "www.uol.com.br";
+    }
 }
