--- a/home-symbolics/.gitconfig
+++ b/home-symbolics/.gitconfig
@@ -104,7 +104,7 @@
 	smudge = git-lfs smudge %f
 	required = true
 
-[fetch]
+[fetch] 
 	prune = true
 [diff]
 	#compactionHeuristic = true
@@ -131,5 +131,5 @@
 [difftool]
 	vscode = code --wait --diff $LOCAL $REMOTE
 [user]
-	name = Rodrigo Ribeiro Ferreira dos Santos
+	name = Rodrigo Santos
 	email = rrfsantos@uolinc.com
