--- a/home-symbolics/.gitconfig
+++ b/home-symbolics/.gitconfig
@@ -112,8 +112,6 @@
     # Show blocks of moved text of at least 20 alphanumeric characters differently than adds/deletes
     # https://blog.github.com/2018-04-05-git-217-released/
   #colorMoved = zebra
-[remote "origin"]
-	fetch = +refs/heads/*:refs/remotes/origin/*
 [stash]
 	showPatch = true
 [log]
@@ -131,5 +129,5 @@
 [difftool]
 	vscode = code --wait --diff $LOCAL $REMOTE
 [user]
-	name = Rodrigo Santos
-	email = rrfsantos@uolinc.com
+	name = Rodrigo Ribeiro
+	email = rodrigo.rifesa@gmail.com
